# oxide-rain

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: collision.rs  components.rs  enemy.rs  main.rs  player.rs  projectile.rs  resources.rs  ui.rs
