[package]
name = "oxide-rain"
version = "0.1.0"
edition = "2021"
description = "A 2D top-down shooter built with Bevy ECS"

[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking"] }

rand = "0.10.0-rc.6"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"     # 용량 최적화 (s는 사이즈, z는 더 작은 사이즈)
lto = true          # 불필요한 코드 제거 (Link Time Optimization)
codegen-units = 1   # 병렬 빌드 끄고 꼼꼼하게 압축 (빌드 시간 늘어남)
strip = true        # 디버그 심볼 제거 (용량 확 줄어듦)